--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -40,12 +40,12 @@
       <header>
         
         {% if site.avatar %}
-        <a class="image avatar"><img src="{{ site.avatar }}" alt="avatar" /></a>
+        <a class="image avatar"><img src="{{ assets.img.me }}" alt="avatar" /></a>
         {% endif %}
 
         <!-- <h1 style="font-size: 1.5rem;">{{ site.title }}</h1> -->
         <h1 style="font-size: 1.5rem;">
-          Yanlin Li <span style="font-family: 'STKaiti', sans-serif;">李岩霖</span>
+          Hao Liu <span style="font-family: 'STKaiti', sans-serif;">刘皓</span>
         </h1>
 
         {% if site.position %}
@@ -103,7 +103,7 @@
       <br>
 
       {% if site.enable_footnote %}
-      <p><center><small>&copy; Yanlin Li, 2025</small></center></p>
+      <p><center><small>&copy; Hao Liu, 2025</small></center></p>
       {% endif %}
 
       </section>
