--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -40,7 +40,7 @@
       <header>
         
         {% if site.avatar %}
-        <a class="image avatar"><img src="{{ assets.img.me }}" alt="avatar" /></a>
+        <a class="image avatar"><img src="{{ site.avatar }}" alt="avatar" /></a>
         {% endif %}
 
         <!-- <h1 style="font-size: 1.5rem;">{{ site.title }}</h1> -->
